Improving the visiblity of the alert close icon. Also fixed the oddity of the about page with the added text above the content.

--- a/concordia/static/css/base.css
+++ b/concordia/static/css/base.css
@@ -1434,3 +1434,7 @@ box-shadow: inset 0 .1875rem .3125rem rgba(0, 0, 0, .125);
     border-color: none;
     color: var(--text-color-primary);
 }
+
+.alert .close {
+    opacity: .8;
+}
